<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/language">
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/languages_key"
            android:entryValues="@array/languages_values"
            android:key="@string/key_preference_language"
            android:title="@string/language" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/units">
        <ListPreference
            android:title="@string/temperature_title"
            android:key="@string/key_preference_temperature"
            android:defaultValue="1"
            android:entries="@array/temperature_units"
            android:entryValues="@array/temperature_units" />
        <ListPreference
            android:title="@string/wind"
            android:key="@string/key_preference_wind"
            android:defaultValue="1"
            android:entries="@array/wind_speed_units"
            android:entryValues="@array/wind_speed_units"
            />
    </PreferenceCategory>

</PreferenceScreen>