<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.kuteweather.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <argument
            android:name="weatherArgument"
            app:argType="com.example.kuteweather.ui.favorites.FavoritesModel" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.kuteweather.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" >
        <action
            android:id="@+id/action_navigation_favorites_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.kuteweather.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.example.kuteweather.ui.maps.MapsFragment"
        android:label="fragment_maps"
        tools:layout="@layout/fragment_maps" >
        <action
            android:id="@+id/action_navigation_maps_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.kuteweather.ui.preferences.SettingsFragment"
        android:label="SettingsFragment" />
</navigation>