<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.example.kuteweather.ui.search.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/autocomplete_fragment"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_height="30dp" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shadow2"
                android:minWidth="330dp"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/search_margin_start"
                    android:text="@{data.city}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView"
                    app:layout_constraintStart_toEndOf="@+id/textView"
                    app:layout_constraintTop_toTopOf="@+id/textView"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="name" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/city"
                    android:textAlignment="textEnd"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{data.countryShortName}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView6"
                    app:layout_constraintStart_toEndOf="@+id/textView6"
                    app:layout_constraintTop_toTopOf="@+id/textView6"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="code" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/search_margin_between_lines"
                    android:text="@{data.country}"
                    app:layout_constraintEnd_toEndOf="@+id/textview_latlng"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textview_latlng"
                    app:layout_constraintTop_toBottomOf="@+id/textview_latlng"
                    tools:text="country" />

                <TextView
                    android:id="@+id/textview_latlng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/search_margin_between_lines"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    tools:text="gps lat1111 lng222" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/search_margin_between_lines"
                    android:text="@string/coordinates"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/textview_latlng"
                    app:layout_constraintEnd_toEndOf="@+id/textView"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/search_margin_between_lines"
                    android:text="@string/country"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/textView3"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <ImageView
                    android:id="@+id/imageview_favorite_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@{data.isFavorite? @drawable/favorite_filled_48px : @drawable/favorite_48px}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2"
                    app:layout_constraintVertical_bias="0.0"
                    app:tint="@color/quantum_googred"
                    tools:srcCompat="@drawable/favorite_filled_48px" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/button_show_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/get_weather"
                android:enabled="@{data.city.length()>0}"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:gravity="center"-->
<!--        android:orientation="vertical"-->
<!--        tools:context=".ui.search.SearchFragment">-->

<!--        <TextView-->
<!--            android:id="@+id/textView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Enter a city name or its GPS coordinates" />-->

<!--        <EditText-->
<!--            android:id="@+id/edittext_search_name"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:ems="10"-->
<!--            android:inputType="textPersonName"-->
<!--            android:afterTextChanged="@{(s) -> data.checkText(s.toString())}"-->
<!--            />-->

<!--        <Button-->
<!--            android:id="@+id/button_search_submit"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:enabled="@{data.isValid?true: false}"-->
<!--            android:text="search" />-->

<!--    </LinearLayout>-->
</layout>