<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.example.kuteweather.ui.home.HomeViewModel" />
        <variable
            name="preferences"
            type="com.example.kuteweather.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <LinearLayout
            android:id="@+id/days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!--
            android:onClick="@{(v) -> data.changeSelected(0)}"
            -->
            <TextView
                android:id="@+id/text_home_today"
                android:layout_width="@dimen/day_text_width"
                android:layout_height="20dp"
                android:background="@{data.selectedDay == 0 ? @drawable/rounded_corner_selected : @drawable/rounded_corner}"
                android:gravity="center"
                android:onClick="@{() -> data.changeSelected(0)}"
                android:text="@string/today"
                android:textColor="@color/white"
                android:textSize="10sp"
                tools:background="@drawable/rounded_corner_selected" />

            <!--
                            android:onClick="@{() -> data.changeSelected(1)}"
            -->
            <TextView
                android:id="@+id/text_home_day_plus1"
                android:layout_width="@dimen/day_text_width"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:background="@{data.selectedDay == 1 ? @drawable/rounded_corner_selected : @drawable/rounded_corner}"
                android:gravity="center"
                android:onClick="@{() -> data.changeSelected(1)}"
                android:text="+1"
                android:textColor="@color/white"
                android:textSize="10sp"
                tools:background="@drawable/rounded_corner" />

            <TextView
                android:id="@+id/text_home_day_plus2"
                android:layout_width="@dimen/day_text_width"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:background="@{data.selectedDay == 2 ? @drawable/rounded_corner_selected : @drawable/rounded_corner}"
                android:gravity="center"
                android:onClick="@{() -> data.changeSelected(2)}"
                android:text="+2"
                android:textColor="@color/white"
                android:textSize="10sp"
                tools:background="@drawable/rounded_corner" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_home_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@{data.data.condition}"
            android:textColor="@color/high_blue"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/text_home_city"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/text_home_city"
            app:layout_constraintTop_toBottomOf="@+id/text_home_city"
            tools:text="Sunny" />

        <ImageView
            android:id="@+id/imageview_home_weather"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shadow_drawable"
            android:contentDescription="weather"
            android:padding="20dp"
            app:imageResource="@{data.data.image}"
            app:layout_constraintEnd_toEndOf="@+id/days"
            app:layout_constraintStart_toStartOf="@+id/days"
            app:layout_constraintTop_toBottomOf="@+id/text_home_condition"
            tools:src="@drawable/day_113" />

        <LinearLayout
            android:id="@+id/layout_home_temperature"
            android:layout_width="@dimen/rectangle_width"
            android:layout_height="@dimen/rectangle_height"
            android:layout_marginEnd="20dp"
            android:background="@drawable/shape"
            android:gravity="center_horizontal"
            android:onClick="@{() -> preferences.toggleTempUnit()}"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/layout_home_wind"
            app:layout_constraintEnd_toStartOf="@+id/layout_home_wind"
            app:layout_constraintTop_toTopOf="@+id/layout_home_wind"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_weight="1"
                app:srcCompat="@drawable/thermometer" />

            <TextView
                android:id="@+id/text_home_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/temp" />

            <LinearLayout
                android:id="@+id/layout_home_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value_top_margin"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:weightSum="3">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_home_temperature_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{preferences.isCelsius? data.data.tempCelsius : data.data.tempFahrenheit}"
                        android:textStyle="bold"
                        tools:text="18" />

                    <TextView
                        android:id="@+id/text_home_temp_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:text="@{preferences.isCelsius? @string/celsius_unit : @string/fahrenheit_unit}"
                        android:textStyle="bold"
                        tools:text="°C" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_home_temp_feel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{preferences.isCelsius? data.data.tempCelsiusFeel : data.data.tempFahrenheitFeel}"
                        android:textSize="12sp"
                        android:textStyle="italic"
                        android:visibility="@{data.selectedDay==0? @integer/visible: @integer/invisible}"
                        tools:text="17" />

                    <TextView
                        android:id="@+id/text_home_tempfeel_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:text="@{preferences.isCelsius? @string/celsius_unit : @string/fahrenheit_unit}"
                        android:textSize="12sp"
                        android:textStyle="italic"
                        android:visibility="@{data.selectedDay==0? @integer/visible: @integer/invisible}"
                        tools:text="°C" />

                    <TextView
                        android:id="@+id/text_home_feel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/feel"
                        android:textSize="12sp"
                        android:textStyle="italic"
                        android:visibility="@{data.selectedDay==0? @integer/visible: @integer/invisible}" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_home_humidity"
            android:layout_width="@dimen/rectangle_width"
            android:layout_height="@dimen/rectangle_height"
            android:layout_marginStart="20dp"
            android:background="@drawable/shape"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/layout_home_wind"
            app:layout_constraintStart_toEndOf="@+id/layout_home_wind"
            app:layout_constraintTop_toTopOf="@+id/layout_home_wind"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_weight="1"
                app:srcCompat="@drawable/water_drop" />

            <TextView
                android:id="@+id/text_home_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:text="@string/humidity" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value_top_margin"
                android:layout_weight="3"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_humidity_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{data.data.humidity}"
                    android:textStyle="bold"
                    android:visibility="@{data.selectedDay==0? @integer/visible: @integer/invisible}"
                    tools:text="50" />

                <TextView
                    android:id="@+id/text_home_humidity_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="%"
                    android:textStyle="bold"
                    android:visibility="@{data.selectedDay==0? @integer/visible: @integer/invisible}"
                    tools:text="%" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_home_wind"
            android:layout_width="@dimen/rectangle_width"
            android:layout_height="@dimen/rectangle_height"
            android:layout_marginTop="32dp"
            android:background="@drawable/shape"
            android:gravity="center_horizontal"
            android:onClick="@{() -> preferences.toggleWindUnit()}"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@+id/imageview_home_weather"
            app:layout_constraintStart_toStartOf="@+id/imageview_home_weather"
            app:layout_constraintTop_toBottomOf="@+id/imageview_home_weather">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_weight="1"
                app:srcCompat="@drawable/wind" />

            <TextView
                android:id="@+id/text_home_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:text="@string/wind" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value_top_margin"
                android:layout_weight="3"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_home_wind_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{preferences.isKph? data.data.windKph : data.data.windMph}"
                    android:textStyle="bold"
                    tools:text="10" />

                <TextView
                    android:id="@+id/text_home_wind_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@{preferences.isKph ? @string/wind_kph : @string/wind_mph}"
                    android:textStyle="bold"
                    tools:text="km/h" />
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_home_wind">

            <!--
            android:visibility="@{data.isCelsius? @integer/visible : @integer/invisible}"
            -->
            <com.anychart.AnyChartView
                android:id="@+id/any_chart_view_celsius"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.anychart.AnyChartView
                android:id="@+id/any_chart_view_fahrenheit"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.anychart.AnyChartView
                android:id="@+id/any_chart_view_day1_celsius"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.anychart.AnyChartView
                android:id="@+id/any_chart_view_day1_fahrenheit"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.anychart.AnyChartView
                android:id="@+id/any_chart_view_day2_celsius"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.anychart.AnyChartView
                android:id="@+id/any_chart_view_day2_fahrenheit"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible"/>

            <!--                android:visibility="@{data.isLoading? @integer/visible : @integer/invisible}" />-->
        </FrameLayout>

        <TextView
            android:id="@+id/text_home_city"
            android:layout_width="269dp"
            android:layout_height="54dp"
            android:layout_marginTop="28dp"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@{data.data.cityName}"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/days"
            app:layout_constraintStart_toStartOf="@+id/days"
            app:layout_constraintTop_toBottomOf="@+id/days"
            tools:text="Paris" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/layout_home_humidity"
            app:layout_constraintEnd_toEndOf="@+id/layout_home_humidity"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="@+id/layout_home_humidity">

            <TextView
                android:id="@+id/text_home_last_updated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_updated"
                android:textSize="8sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/text_home_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:gravity="end"
                android:text="@{data.data.date}"
                android:textSize="8sp"
                android:textStyle="italic"
                tools:text="13h20" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageview_home_favorite"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@{data.isFavorite? @drawable/favorite_filled_48px : @drawable/favorite_48px}"
            app:layout_constraintBottom_toBottomOf="@+id/text_home_city"
            app:layout_constraintEnd_toEndOf="@+id/layout_home_humidity"
            app:layout_constraintHorizontal_bias="0.153"
            app:layout_constraintStart_toEndOf="@+id/text_home_city"
            app:layout_constraintTop_toTopOf="@+id/text_home_city"
            app:layout_constraintVertical_bias="0.586"
            app:tint="@color/quantum_googred"
            tools:src="@drawable/favorite_48px" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>